Improve seed script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "up": "docker-compose up",
     "down": "docker-compose down",
     "setup": "docker exec -it ecommerce_server node scripts/setup",
+    "seed": "docker exec -it ecommerce_server node scripts/seed",
     "dev": "nodemon --watch src src/index.js",
     "start": "node src/index.js"
   },
